# ats

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.pt-BR.md  README.md  SECURITY.md  docker-compose.yml
bot/: .env.example  .gitignore  Dockerfile  README.md  config.yaml.example  main.py  pyproject.toml  requirements.txt
bot/app/: logging_config.py  logging_setup.py  main.py
bot/app/controllers/: analysis_controller.py  health_controller.py
bot/app/core/: container.py  logging.py  settings.py
bot/app/models/: ai_pipeline.py  analysis.py  error_response.py  fallback_detail.py  health_status.py  rabbitmq_output.py  relevance_evaluation.py  sanitization_summary.py
bot/app/providers/: __init__.py  base.py  deepseek.py  error_mapping.py  factory.py  gemini.py  groq.py  interfaces.py  langchain_provider.py  mock.py  ollama.py  openai.py  openai_compatible.py
bot/app/schemas/: ai_analysis.py  ai_pipeline.py  analysis.py
bot/app/services/: ai_context.py  ai_manager.py  (+18 more)
bot/tests/: test_ai_manager.py  test_ai_orchestrator.py  test_ats_analyzer.py  test_context_keyword_fact_bank.py  test_document_readers.py  test_gemini_provider.py  test_generic_fact_bank_parser.py  test_health.py  test_job_normalizer.py  test_langchain_provider.py  test_matching_group_accuracy.py  test_privacy_normalization.py  test_providers.py  test_rabbitmq_payload_parser.py  test_rabbitmq_worker.py  test_realistic_ats_engine.py  test_resume_file_fetcher.py  test_semantics_and_final_score.py  test_structured_ai_analysis.py  test_synthetic_resume_privacy.py
(+165 files in other folders)
