[project]
name = "bot"
version = "0.1.0"
description = "Bot base for ATS automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dependency-injector==4.49.1",
    "httpx==0.28.1",
    "hypercorn==0.18.0",
    "langchain==1.3.11",
    "langchain-deepseek==1.1.0",
    "langchain-google-genai==4.2.6",
    "langchain-groq==1.1.3",
    "langchain-ollama==1.1.0",
    "langchain-openai==1.3.3",
    "markitdown[docx,pdf]==0.1.6",
    "pika==1.3.2",
    "prometheus-client==0.25.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "python-json-logger==3.2.1",
    "pyyaml==6.0.3",
    "quart==0.20.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
]

[tool.uv]
package = false
